--- a/server/.gitignore
+++ b/server/.gitignore
@@ -45,6 +45,7 @@ build/Release
 # Dependency directories
 node_modules/
 .env
+needTOLearn.md
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
